k8s/deployment-app-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a
spec:
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
      - name: app-a
        image: algab/poc-istio-app-a:1.0
        resources:
          limits:
            memory: "32Mi"
            cpu: "125m"
        ports:
        - containerPort: 3000
