k8s/deployment-app-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
spec:
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
      - name: app-b
        image: algab/poc-istio-app-b:1.0
        resources:
          limits:
            memory: "32Mi"
            cpu: "125m"
        ports:
        - containerPort: 3001
