k8s/deployment-app-c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-c
spec:
  selector:
    matchLabels:
      app: app-c
  template:
    metadata:
      labels:
        app: app-c
    spec:
      containers:
      - name: app-c
        image: algab/poc-istio-app-c:1.0
        resources:
          limits:
            memory: "32Mi"
            cpu: "125m"
        ports:
        - containerPort: 3002
