k8s/service-app-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-a
spec:
  selector:
    app: app-a
  ports:
  - port: 80
    targetPort: 3000
