k8s/service-app-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-b
spec:
  selector:
    app: app-b
  ports:
  - port: 80
    targetPort: 3001
