k8s/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-front
spec:
  selector:
    app: front
  ports:
  - port: 80
    targetPort: 80
