k8s/http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^(/front)$ $1/ redirect;
spec:
  rules:
  - http:
      paths:
      - path: /front(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: service-front
            port:
              number: 80
      - path: /app-a(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: service-app-a
            port:
              number: 80
      - path: /app-b(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: service-app-b
            port:
              number: 80
      - path: /app-c(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: service-app-c
            port:
              number: 80
